# openevse_esp32_firmware

./: .clang-tidy  .eslintignore  .eslintrc.json  .gitignore  .gitmodules  .spectral.json  .spectral.mjs  .stoplight.json  .travis.yml  AGENTS.md  CMakeLists.txt  GUI_CHANGES.md  IMPLEMENTATION_SUMMARY.md  MQTT_Disconnect.md  NAMING_CONVENTIONS.md  NTP_Status_Changes.md  OpenEVSE_RAPI_WiFi_ESP8266.ino  OpenEVSE_RAPI_WiFi_ESP8266_Devolopment.ino  SECURITY.md  TESTING.md  Vagrantfile  WiFi_Disconnect_fixes.md  _codeql_detected_source_root  api.yml  config.cpp  config.h  emoncms.cpp  emoncms.h  emonesp.h  http.cpp  input.cpp  input.h  min_spiffs_debug.csv  mqtt.h  mqtt_solar_changes.md  ohm.cpp  ohm.h  openevse_16mb.csv  platformio.ini  prepare-release.sh  (+10 more)
.github/: copilot-instructions.md  dependabot.yml
.stoplight/: styleguide.json
Developers_Guides/: Developers Guide_HTTP.docx  Developers Guide_MQTT.docx
components/esp_tsdb/: CMakeLists.txt  idf_component.yml  library.json
components/esp_tsdb/include/: esp_tsdb.h
components/esp_tsdb/src/: tsdb_benchmark.c  tsdb_buffer.c  tsdb_core.c  tsdb_index.c  tsdb_internal.h  tsdb_query.c  tsdb_write.c
data/: Thumbs.db  config.js  home.html  new 1.txt  style.css
divert_sim/: .gitignore  EEPROM.h  LittleFS.h  Makefile  Makefile.FakeDuino  README.md  RapiSender.cpp  divert_sim.cpp  divert_test_gen.py  interactive.html  requirements.txt  run_simulations.py  runall.sh  runtest.py  server.py  sim_platformio_compat.h  simulations.css  simulations.js  test.http  test_config.py  test_divert.py  test_loadsharing.py  test_shaper.py  (+1 more)
(+1265 files in other folders)
